<resources>
    <string name="app_name">CommUnity</string>
    <string name="title_home">Home</string>
    <string name="title_menu">Menu</string>
    <string name="title_notifications">Announcements</string>
    <string name="default_notification_channel_id">Town Announcements</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Don\'t have an account? <b>Register</b></string>
    <string name="app_logo">App Logo</string>
    <string name="login_prompt">Already have an account? </string>
    <string name="login_action"> Login</string>
    <string name="register_prompt">Don\'t have an account? </string>
    <string name="register_action"> Register</string>
</resources>